# django-react-template

./: .env.example  .gitignore  README.md  secret_key.txt  setup.cfg
.github/workflows/: build.yml
.run/: Build CSS.run.xml  Build React app (dev).run.xml  Build React app (production).run.xml  Django.run.xml  Install frontend dependencies.run.xml  Storybook.run.xml
django_react/: settings.py  urls.py
frontend/: babel.config.json  craco.config.js  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/.storybook/: StorybookLayout.js  main.js
frontend/src/: index.js  index.tsx
frontend/src/components/: App.js  App.stories.js  ExampleComponent.js  ExampleComponent.stories.js
frontend/src/components/Template/: component.stories.mdx  component.tsx
frontend/src/css/: project.css
frontend/src/scss/: tailwind.scss
frontend/static/: kij.development.js  kij.development.js.map  kij.production.min.js  kij.production.min.js.map  template-project.css
frontend/static/frontend/: main.js
frontend/templates/frontend/: index.html
src/: manage.py  requirements.txt
src/project/core/: models.py
src/project/django_react/: settings.py  urls.py
src/project/frontend/: apps.py  package.json
