[metadata]
name = my_project
version = 1.0.0
author = Anthony Ilareguy
author_email = anthony@ilareguy.com
description = Your project description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ilareguy/django-react-template
project_urls =
    Bug Tracker = https://github.com/ilareguy/django-react-template/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    Django>=3.2<4
    python-dotenv>=0.19
    pycryptodome>=3.14
    grpc_interceptor>=0.14

[options.packages.find]
where = src
